--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -35,8 +35,8 @@
 %% 
 %% ------------------------------------------------------------------------
 %% 
-\NeedsTeXFormat{LaTeX2e}[2024-06-01]
-\ProvidesExplPackage {enumext} {2024-10-29} {1.0} {Enumerate exercise sheets}
+\NeedsTeXFormat{LaTeX2e}[2024-11-01]
+\ProvidesExplPackage {enumext} {2024-11-01} {1.0} {Enumerate exercise sheets}
 \hook_gput_code:nnn {begindocument} {enumext}
   {
     \IfPackageLoadedTF { multicol }
@@ -4190,7 +4190,7 @@
     \IfDocumentMetadataTF
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {start-list-tags}
-        \tag_socket_use:nn {__enumext/starred} {#1}
+        \socket_use:nn {tagsupport/__enumext/starred} {#1}
       } {}
    }
 \cs_new_protected_nopar:Nn \__enumext_stop_start_list_tag:
@@ -4198,7 +4198,7 @@
     \IfDocumentMetadataTF
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {stop-start-tags}
-        \tag_socket_use:nn {__enumext/starred} { }
+        \socket_use:nn {tagsupport/__enumext/starred} { }
       } {}
    }
 \cs_new_protected_nopar:Npn \__enumext_stop_list_tag:n #1
@@ -4206,7 +4206,7 @@
     \IfDocumentMetadataTF
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {stop-list-tags}
-        \tag_socket_use:nn {__enumext/starred} {#1}
+        \socket_use:nn {tagsupport/__enumext/starred} {#1}
       } {}
    }
 %% Implement socket for tagging support in |keyanspic| environment.
@@ -4244,7 +4244,7 @@
     \IfDocumentMetadataTF
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {start-list-tags}
-        \tag_socket_use:n {__enumext/keyanspic}
+        \socket_use:n {tagsupport/__enumext/keyanspic}
       } {}
    }
 \cs_new_protected_nopar:Nn \__enumext_anspic_stop_start_list_tag:
@@ -4252,7 +4252,7 @@
     \IfDocumentMetadataTF
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {stop-start-tags}
-        \tag_socket_use:n {__enumext/keyanspic}
+        \socket_use:n {tagsupport/__enumext/keyanspic}
       } {}
    }
 \cs_new_protected_nopar:Nn \__enumext_anspic_stop_list_tag:
@@ -4260,7 +4260,7 @@
     \IfDocumentMetadataTF
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {stop-list-tags}
-        \tag_socket_use:n {__enumext/keyanspic}
+        \socket_use:n {tagsupport/__enumext/keyanspic}
       } {}
    }
 %% Add keys for |keyanspic| environment.
