Remove duplicate world

--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -910,7 +910,7 @@
 %
 % \section{Introduction}
 %
-% In the \hologo{LaTeX} world world there are many useful packages and
+% In the \hologo{LaTeX} world there are many useful packages and
 % classes for creating \emph{\enquote{lists of exercises}}, \emph{\enquote{worksheets}}  or
 % \emph{\enquote{multiple choice questions}}, classes like \myclass{exam}\cite{exam}
 % and packages like \mypkg{xsim}\cite{xsim} do the job perfectly, but
