Replace left by right in sample

--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -1042,7 +1042,7 @@
 %    \anspic*[A duck]{\includegraphics[scale=0.30]{example-image-duck}}
 %  \end{keyanspic}
 %
-% \item Question with image on left side:
+% \item Question with image on right side:
 %
 %    \begin{keyans}[mini-env=0.5\linewidth, columns=1,noitemsep]
 %        \item value
