Update doc, test and build.lua

--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -3832,7 +3832,7 @@ $ pdfdetach -saveall enumext.pdf
 \anspic*[A duck]{\includegraphics[scale=0.32]{example-image-duck}}
 \end{keyanspic}
 
-\item Question with image on left side:
+\item Question with image on right side:
 \begin{keyans}[mini-env=0.5\linewidth, columns=1,noitemsep]
     \item value
     \item value
@@ -3900,7 +3900,7 @@ Test keys
 %    \anspic*[A duck]{\includegraphics[scale=0.32]{example-image-duck}}
 %  \end{keyanspic}
 %
-% \item Question with image on left side:
+% \item Question with image on right side:
 %    \begin{keyans}[mini-env=0.5\linewidth, columns=1,noitemsep]
 %        \item value
 %        \item value
